[package]
name = "shuttle-discord-bot-test-11829374"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
heapless = "0.8.0"
poise = "0.6.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
tokio = "1.40.0"
tracing = "0.1.40"
secrecy = "0.10.3"
[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

